Finally fixed radio button alignment with labels by adding :NOT() pseudo-class

--- a/css/styles.css
+++ b/css/styles.css
@@ -295,7 +295,8 @@ h3 {
   margin-bottom: 0;
 }
 
-label {
+label,
+legend {
   font-family: "Roboto", sans-serif;
   font-size: 1.5em;
   font-weight: 100;
@@ -305,7 +306,7 @@ label {
   margin-bottom: 5px;
 }
 
-input,
+input:not([type="radio"]),
 textarea {
   font-family: "Open Sans", sans-serif;
   font-weight: 100;
@@ -318,6 +319,24 @@ textarea {
   padding: 5px;
   letter-spacing: 1px;
   min-width: 500px;
+}
+
+fieldset {
+  display: flex;
+  padding: 5px;
+}
+
+fieldset label {
+  font-size: 1em;
+  margin: 9px 0 0 0;
+}
+
+fieldset input {
+  margin: 12px;
+}
+
+fieldset label.radio-label:after {
+  content: "";
 }
 
 input:hover,
@@ -351,7 +370,8 @@ textarea {
   text-decoration: none;
 }
 
-label[for]:after {
+label[for]:after,
+legend:after {
   content: "*";
   color: #e63946;
   margin-left: 5px;
@@ -391,6 +411,27 @@ label[for="mobile"]:after {
 
 .wrapper.open {
   grid-template-rows: 1fr;
+}
+
+#footer-details {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  height: auto;
+  width: 100%;
+}
+
+footer p {
+  margin: 0;
+  color: #ffdede;
+  font-size: 0.8em;
+}
+
+#social-icons {
+  display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 768px) {
